#8 Creation information controller + service + openapi + update information entity
